--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.5",
+    "@material-ui/core": "^4.12.3",
+    "graphql": "^16.0.1",
     "next": "12.0.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-html-parser": "^2.0.2"
   },
   "devDependencies": {
     "eslint": "7",
